Add wrapper around libquicktime
This class will be used to decode game video.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ ENDIF(NOT EXISTS ${PROJECT_SOURCE_DIR}/extlibs/SDL2pp/CMakeLists.txt)
 SET(SDL2PP_WITH_IMAGE TRUE)
 ADD_SUBDIRECTORY(extlibs/SDL2pp)
 
+SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+FIND_PACKAGE(QuickTime REQUIRED)
+
 # sources
 SET(OPENDAED_SOURCES
 	main.cc
@@ -20,9 +23,10 @@ SET(OPENDAED_SOURCES
 	gameinterface.cc
 	nodfile.cc
 	interpreter.cc
+	quicktime.cc
 )
 
 # binary
-INCLUDE_DIRECTORIES(${SDL2PP_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${SDL2PP_INCLUDE_DIRS} ${QUICKTIME_INCLUDE_DIR})
 ADD_EXECUTABLE(opendaed ${OPENDAED_SOURCES})
-TARGET_LINK_LIBRARIES(opendaed ${SDL2PP_LIBRARIES})
+TARGET_LINK_LIBRARIES(opendaed ${SDL2PP_LIBRARIES} ${QUICKTIME_LIBRARY})
