Add option for bug to bug compatibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 # common depends and definitions
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic")
 
+OPTION(BUG2BUG "Enable bug-to-bug compatibility (useless really)" OFF)
+
 # depends
 IF(NOT EXISTS ${PROJECT_SOURCE_DIR}/extlibs/SDL2pp/CMakeLists.txt)
 	MESSAGE(FATAL_ERROR "The source directory\n  ${PROJECT_SOURCE_DIR}/extlibs/SDL2pp\ndoes not contain a CMakeLists.txt file.\nIt is likely that you forgot to run\n  git submodule init && git submodule update")
@@ -31,6 +33,10 @@ SET(OPENDAED_SOURCES
 )
 
 # binary
+IF(BUG2BUG)
+	ADD_DEFINITIONS(-DBUG2BUG)
+ENDIF(BUG2BUG)
+
 INCLUDE_DIRECTORIES(${SDL2PP_INCLUDE_DIRS} ${QUICKTIME_INCLUDE_DIR})
 ADD_EXECUTABLE(opendaed ${OPENDAED_SOURCES})
 TARGET_LINK_LIBRARIES(opendaed ${SDL2PP_LIBRARIES} ${QUICKTIME_LIBRARY})
