--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,13 @@
 language: cpp
+sudo: required
+dist: trusty
 compiler:
   - gcc
   - clang
 before_install:
   - sudo add-apt-repository --yes ppa:zoogie/sdl2-snapshots
-  - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake libsdl2-dev libsdl2-image-dev libquicktime-dev g++-4.8
-  - sudo sed -i -e 's|friend class hash|friend struct hash|' /usr/include/c++/4.8/bits/stl_bvector.h
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+  - sudo apt-get install -qq cmake libsdl2-dev libsdl2-image-dev libquicktime-dev
 script:
-    # travis has outdated libquicktime which doesn't have these functions
-    # so hack the source to avoid them. Code would be broken obviously, but
-    # furtunately all we need is to ensure it compiles
-  - sed -i -e 's/return lqt_get_.*_pts_offset.*/return track;/' quicktime.cc
   - cmake -DCMAKE_CXX_FLAGS=-Werror .
   - make
